--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "cookie-parser": "^1.4.7",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
-    "nodemon": "^3.1.7"
+    "install": "^0.13.0",
+    "nodemon": "^3.1.7",
+    "npm": "^10.9.1"
   }
 }
